# Nimble

./: .gitignore  CMakeDebug.bat  CMakeLists.txt  Clear.bat  main.cpp
graphics/: MenuButton.aseprite  Slider.aseprite
include/GameObject/: Actor.hpp  GameObject.hpp
include/Main/: AssetsEditor.hpp  Framework.hpp  Globals.hpp  UserInterface.hpp
include/Utility/: Debug.hpp  InterfaceFunctions.hpp  SaveLoad.hpp
src/GameObject/: Actor.cpp  GameObject.cpp
src/Main/: AssetsEditor.cpp  Framework.cpp  Globals.cpp  UserInterface.cpp
src/Utility/: Debug.cpp  InterfaceFunctions.cpp  SaveLoad.cpp
